# sdr-project

./: .env.example  .gitignore  README.md  docs.md  main.py  pyproject.toml  run_email_monitor.py  setup_webhook.py  test_email_monitor.py
apps/: __init__.py
apps/api/: main.py
config/: __init__.py  logging.py  settings.py
db/: schema.sql  seed.sql
email_monitor/: __init__.py  email_response.py  email_sender.py  intent_extractor.py  monitor.py  response_evaluator.py  server.py
outreach/: __init__.py  gradio_interface.py  marketing_agent.py
schema/: __init__.py  email.py  outreach.py  tools.py
scripts/: check_db.py  check_leads_detailed.py  get_latest_outreach.py  prepare_test.py  run_outreach.py  seed_contacts.py  set_test_email.py  test_model_fallback.py
services/: email_service.py  lead_service.py  meeting_service.py  staff_service.py
tests/: test_guardrails.py
tools/: __init__.py  campaign_tools.py  content_tools.py  email_reply.py  email_tools.py  generate_meeting_details.py  get_staff_email.py  google_calendar.py  lead_tools.py  meeting_tools.py  notify_staff.py  send_email.py  staff_tools.py
utils/: db_connection.py  model_fallback.py
